# auto-writer

./: .env.example  .gitignore  Makefile  README.md  cli.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: packaging-dryrun.yml
app/: __init__.py  main.py  scheduler.py  vps_manager.py
app/auth/: __init__.py  oidc.py  security.py
app/automation/: publisher.py  pw_helper.py  wechat_mp_bot.py  zhihu_bot.py
app/chaos/: hooks.py
app/cli/: doctor.py
app/dashboard/: __init__.py  server.py
app/db/: migrate.py  migrate_sched.py  models.py  models_sched.py  schema.sql
app/dedup/: deduplicator.py  textnorm.py
app/delivery/: __init__.py  base.py  dispatcher.py  medium_adapter.py  playwright_driver.py  registry.py  types.py  wechat_mp_adapter.py  wechat_mp_playwright.py  wordpress_adapter.py  zhihu_adapter.py  zhihu_playwright.py
app/dispatch/: __init__.py  api.py  service.py  store.py
app/gui/: main.py  (+2 more)
automation/: __init__.py  cdp.py  utils.py  wechat_automator.py  zhihu_automator.py
autowriter_desktop/: README_DESKTOP.md  app.py  main.py  pyinstaller.spec
autowriter_text/: __init__.py  config.yaml  configuration.py  logging.py  prompt_builder.py  sanitizer.py  smoke_test.py  validator.py
config/: logging_conf.py  settings.py
docs/: operations.md
exporter/: __init__.py  common.py  packer.py  wechat_exporter.py  zhihu_exporter.py
infra/: cloud_init_example.txt  vps_manager.py
jobs/: job.schema.json
profiles/: README.md  default.yml  psy_film.yml
scripts/: add_user.py  deliver_once.py  doctor.py  doctor_dedup.py  export_report.py  publish_all.py  publish_one.py  retry_due.py  run_gui.py  run_now.py  schedule_profile.py
tests/: conftest.py  test_basic.py  test_delivery_minimal.py  test_export_smoke.py
(+125 files in other folders)
